# Dikastinhos-Bot

./: .env  README.md  keep_alive.py  main.py  phrases_fausto.txt  pyproject.toml  requirements.txt
