[tool.poetry]
name = "Dikastinho - Bot"
version = "0.1.0"
description = "A simple bot to Discord Severs"
authors = ["Eric de Lima <evl@cin.ufpe.br>",
           "Your Name <you@example.com>"
           ]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.2"
ibm-cloud-sdk-core = "^3.12.0"
ibm-watson = "^5.3.0"
discord-webhook = "^0.14.0"
pytz = "^2021.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
